# terrainseg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/terrainseg/: __init__.py
src/terrainseg/models/: convnextunet.py  customunet.py  unet.py
src/terrainseg/utils/: checks.py  chips.py  dynamicchips.py  lsps.py  spatialpredict.py  trainer.py
tests/: test_terrainseg.py
