[tool.poetry]
name = "terrainseg"
version = "0.1.0"
description = "Geomorphic semantic segmentation using DTMs and LSPs."
authors = ["Aaron Maxwell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
