[tool.poetry]
name = "terrainseg"
version = "0.1.0"
description = "Geomorphic semantic segmentation using DTMs and LSPs."
authors = ["Aaron Maxwell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
torch = "^2.10.0"
pandas = "^3.0.0"
geopandas = "^1.1.2"
matplotlib = "^3.10.8"
torchmetrics = "^1.8.2"
albumentations = "^2.0.8"
segmentation-models-pytorch = "^0.5.0"
rasterio = "^1.4.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.7.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
